!1431 fix(#I3SMEY): resolve dropdown overflow on Editor component * release: publish 5.0.32-beta04 * fix: 修复 editor 下拉框样式溢出问题

--- a/src/BootstrapBlazor/Components/Editor/Editor.razor.cs.css
+++ b/src/BootstrapBlazor/Components/Editor/Editor.razor.cs.css
@@ -32,4 +32,6 @@
 
 .editor .dropdown-menu {
     overflow: unset;
+    max-height: unset;
+    max-width: unset;
 }
